--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,200 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.body {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  background-color: #ffffff;
+}
+
+/* -------------------------------------MOBILE STYLES----------------------------------------- */
+.container {
+  max-width: 288px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.section {
+  margin: 96px 0;
+}
+.page-header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.modal-window-open-button {
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+}
+.nav-menu {
+  display: none;
+}
+.contact-list {
+  display: none;
+}
+.logotype {
+  color: #2e2f42;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  text-transform: uppercase;
+}
+/* modal window */
+.mobile-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  line-height: 0;
+  background-color: transparent;
+  border-color: #e7e9fc;
+  border-radius: 50%;
+}
+.mobile-nav {
+  padding-top: 72px;
+}
+.modal-window-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background-color: #ffffff;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window-mobile.is-open {
+  transform: translateX(0%);
+}
+.mobile-nav-menu {
+  margin-bottom: 168px;
+}
+.mobile-nav-menu-item {
+  margin-bottom: 40px;
+}
+.mobile-nav-menu-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.current-color {
+  color: #404bbf;
+}
+.mobile-contact-list {
+  margin-bottom: 48px;
+}
+.mobile-contact-list-item {
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.current-color {
+  color: #404bbf;
+}
+.mobile-contact-list-part {
+  margin-bottom: 24px;
+}
+.mobile-social-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+.mobile-social-link-icon {
+  fill: #f4f4fd;
+}
+
+.mobile-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* section 1 */
+
+.button {
+  font-family: 'Roboto', sans-serif;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: left;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border-radius: 4px;
+  border: none;
+}
+.hero-image {
+  max-width: 320px;
+  margin: auto;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/theme-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 432px;
+}
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+  .hero-image {
+    background-image: url(../images/theme-mobile@2x.jpg);
+  }
+}
+.main-title {
+  color: #ffffff;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  padding-bottom: 72px;
+  padding-top: 72px;
+  padding: 72px 16px;
+}
+/* -------------------------------------TABLET STYLES----------------------------------------- */
+@media screen (min-width: 1440px) {
+}
+
+/* -------------------------------------DESKTOP STYLES----------------------------------------- */
+@media screen (min-width: 768px) {
+}
