--- a/css/styles.css
+++ b/css/styles.css
@@ -51,14 +51,15 @@ button {
 
 /* -------------------------------------MOBILE STYLES----------------------------------------- */
 .container {
-  max-width: 288px;
+  max-width: 296px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
 }
 .section {
-  margin: 96px 0;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .page-header {
   padding-top: 16px;
@@ -80,12 +81,6 @@ button {
   border: none;
   padding: 0;
   margin-left: auto;
-}
-.nav-menu {
-  display: none;
-}
-.contact-list {
-  display: none;
 }
 .logotype {
   color: #2e2f42;
@@ -213,13 +208,18 @@ button {
   background-size: cover;
   min-height: 432px;
 }
-@media screen and (min-resolution: 192dpi) and (max-width: 767px),
-  screen and (min-resolution: 2dppx) and (max-width: 767px),
-  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+@media screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 320px) {
   .hero-image {
-    background-image: url(../images/theme-mobile@2x.jpg);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/theme-mobile@2x.jpg);
   }
 }
+
 .main-title {
   color: #ffffff;
   text-align: center;
@@ -232,8 +232,136 @@ button {
   padding-top: 72px;
   padding: 72px 16px;
 }
+/* section 2 */
+.title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 8px;
+}
+.advantages-list {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+.advantages-text {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+/* section 3 */
+.team-section {
+  background: #f4f4fd;
+}
+.title {
+  margin-bottom: 72px;
+}
+.members-list {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+.members {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.members-info {
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.members-text {
+  color: #434455;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.member-card {
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+/* icons */
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-link-icon {
+  fill: #f4f4fd;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+/* section 4 */
+.portfolio-list-main {
+  border: 1px solid #f4f4fd;
+  background: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-project {
+  color: #2e2f42;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.portfolio-project-text {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.2em;
+}
+.portfolio-list-item {
+  padding: 32px 16px;
+}
+/* Only mobile styles */
+@media screen and (max-width: 767px) {
+  .advantages-icon-item {
+    display: none;
+  }
+  .nav-menu {
+    display: none;
+  }
+  .contact-list {
+    display: none;
+  }
+  .overlay-item {
+    display: none;
+  }
+}
 /* -------------------------------------TABLET STYLES----------------------------------------- */
-@media screen (min-width: 1440px) {
+@media screen (min-width: 1158px) {
+  .overlay-item {
+    display: none;
+  }
 }
 
 /* -------------------------------------DESKTOP STYLES----------------------------------------- */
