--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ ol {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 button {
   cursor: pointer;
@@ -172,7 +174,6 @@ button {
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* section 1 */
 
@@ -342,6 +343,115 @@ button {
 .portfolio-list-item {
   padding: 32px 16px;
 }
+/* Footer */
+.footer {
+  background-color: #2e2f42;
+}
+.footer-main,
+.footer-container,
+.footer-subscribe-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.logo-footer {
+  color: #f4f4fd;
+}
+.footer-logotype {
+  color: #4d5ae5;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+.footer-social {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.footer-links {
+  gap: 16px;
+}
+.footer-links-text {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.footer-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.footer-form-label {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.footer-form {
+  width: 288px;
+  height: 40px;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background: transparent;
+  padding: 16px 8px;
+}
+.footer-form::placeholder {
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding: 16px 8px;
+}
+.button-subscribe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background: #4d5ae5;
+  gap: 16px;
+  padding: 8px 24px;
+  height: 40px;
+  width: 165px;
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  position: relative;
+  border: none;
+}
+.form-subscribe-icon {
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 /* Only mobile styles */
 @media screen and (max-width: 767px) {
   .advantages-icon-item {
@@ -357,6 +467,7 @@ button {
     display: none;
   }
 }
+
 /* -------------------------------------TABLET STYLES----------------------------------------- */
 @media screen (min-width: 1158px) {
   .overlay-item {
