--- a/css/styles.css
+++ b/css/styles.css
@@ -435,7 +435,7 @@ button {
   gap: 16px;
   padding: 8px 24px;
   height: 40px;
-  width: 165px;
+  max-width: 165px;
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
   text-align: center;
@@ -443,15 +443,95 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  position: relative;
   border: none;
 }
-.form-subscribe-icon {
-  max-width: 100%;
-  position: absolute;
+/* Backdrop */
+.backdrop {
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 999999;
 }
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 288px;
+  height: 623px;
+  border-radius: 4px;
+  background: #fcfcfc;
+}
+
+.backdrop-text {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.close-btn {
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  fill: rgba(0, 0, 0, 0.1);
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.form-wrappper-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #2e2f4266;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-wrappper-input:focus .form-wrappper-input:active {
+  border-color: #4d5ae5;
+}
+.form-wrapper-label {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.backdrop-btn {
+  cursor: pointer;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 16px 32px;
+  width: 105px;
+  border-radius: 4px;
+  border: none;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.form-link {
+  color: #4d5ae5;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: 0.04em;
+  text-decoration: underline;
+}
+/* .input-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+} */
+
 /* Only mobile styles */
 @media screen and (max-width: 767px) {
   .advantages-icon-item {
