--- a/css/styles.css
+++ b/css/styles.css
@@ -454,6 +454,16 @@ button {
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   z-index: 999999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .modal {
   position: absolute;
@@ -461,9 +471,13 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 288px;
-  height: 623px;
+  min-height: 623px;
   border-radius: 4px;
   background: #fcfcfc;
+  padding: 72px 16px 16px 16px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop-text {
@@ -473,50 +487,147 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-btn {
+  position: absolute;
   background-color: transparent;
-  border: none;
+  right: 24px;
+  top: 24px;
   width: 24px;
   height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
-  fill: rgba(0, 0, 0, 0.1);
-  position: absolute;
-  right: 0;
-  top: 0;
+  cursor: pointer;
+  background-color: #e7e9fc;
+  fill: #2e2f42;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-wrappper-input {
-  width: 100%;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid #2e2f4266;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.close-btn:focus,
+.close-btn:hover {
+  background-color: #404bbf;
+  border: none;
 }
-
-.form-wrappper-input:focus .form-wrappper-input:active {
-  border-color: #4d5ae5;
+.close-btn:focus .close-btn-icon,
+.close-btn:hover .close-btn-icon {
+  fill: #ffffff;
 }
 .form-wrapper-label {
+  display: block;
+  margin-bottom: 4px;
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
-.backdrop-btn {
-  cursor: pointer;
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  padding: 16px 32px;
-  width: 105px;
+.form-wrapper {
+  margin-bottom: 8px;
+}
+.form-wrappper-input {
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
   border-radius: 4px;
+  border: 1px solid #2e2f4266;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: 0px solid transparent;
+  padding-left: 38px;
+}
+.form-wrapper-input:focus {
+  border-color: #4d5ae5;
+}
+.form-wrapper-input:focus + .input-icon {
+  fill: #4d5ae5;
+}
+.input-block {
+  position: relative;
+}
+.input-icon {
+  position: absolute;
+  left: 16px;
+  transform: translateY(-50%);
+  top: 50%;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-textarea {
+  margin-bottom: 16px;
+}
+.textarea-input {
+  width: 100%;
+  resize: none;
+  padding: 8px 16px;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea-input:focus {
+  border-color: #4d5ae5;
+}
+.textarea-input::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.checkbox {
+  margin-bottom: 24px;
+}
+.custom-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #2e2f4266;
+  border-radius: 2px;
+  cursor: pointer;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-icon {
+  fill: #ffffff;
+  opacity: 0;
+}
+.checkbox-input:checked + .accept-form-label > .custom-checkbox {
+  background-color: #404bbf;
+  border-color: #404bbf;
   border: none;
-  background: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  fill: #f4f4fd;
+}
+.checkbox-input:checked + .accept-form-label .checkbox-icon {
+  opacity: 1;
+}
+.checkbox-input:focus + .accept-form-label > .custom-checkbox {
+  outline: 1px solid #4d5ae5;
+}
+.accept-form-label {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
 .form-link {
   color: #4d5ae5;
@@ -526,11 +637,26 @@ button {
   letter-spacing: 0.04em;
   text-decoration: underline;
 }
-/* .input-icon {
-  position: absolute;
-  left: 0;
-  top: 0;
-} */
+.backdrop-btn {
+  display: block;
+  margin: 24px auto;
+  border: none;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 /* Only mobile styles */
 @media screen and (max-width: 767px) {
