--- a/css/styles.css
+++ b/css/styles.css
@@ -93,88 +93,7 @@ button {
   text-transform: uppercase;
 }
 /* modal window */
-.mobile-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 24px;
-  height: 24px;
-  line-height: 0;
-  background-color: transparent;
-  border-color: #e7e9fc;
-  border-radius: 50%;
-}
-.mobile-nav {
-  padding-top: 72px;
-}
-.modal-window-mobile {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999999;
-  background-color: #ffffff;
-  transform: translateX(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-window-mobile.is-open {
-  transform: translateX(0%);
-}
-.mobile-nav-menu {
-  margin-bottom: 168px;
-}
-.mobile-nav-menu-item {
-  margin-bottom: 40px;
-}
-.mobile-nav-menu-link {
-  color: #2e2f42;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-}
-.current-color {
-  color: #404bbf;
-}
-.mobile-contact-list {
-  margin-bottom: 48px;
-}
-.mobile-contact-list-item {
-  color: #434455;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
-.current-color {
-  color: #404bbf;
-}
-.mobile-contact-list-part {
-  margin-bottom: 24px;
-}
-.mobile-social-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 24px;
-}
-.mobile-social-link-icon {
-  fill: #f4f4fd;
-}
 
-.mobile-social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-}
 /* section 1 */
 
 .button {
@@ -229,8 +148,6 @@ button {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding-bottom: 72px;
-  padding-top: 72px;
   padding: 72px 16px;
 }
 /* section 2 */
@@ -672,15 +589,186 @@ button {
   .overlay-item {
     display: none;
   }
-}
+  .mobile-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    line-height: 0;
+    background-color: transparent;
+    border-color: #e7e9fc;
+    border-radius: 50%;
+  }
+  .mobile-nav {
+    padding-top: 72px;
+  }
+  .modal-window-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    background-color: #ffffff;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-window-mobile.is-open {
+    transform: translateX(0%);
+  }
+  .mobile-nav-menu {
+    margin-bottom: 168px;
+  }
+  .mobile-nav-menu-item {
+    margin-bottom: 40px;
+  }
+  .mobile-nav-menu-link {
+    color: #2e2f42;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  }
+  .current-color {
+    color: #404bbf;
+  }
+  .mobile-contact-list {
+    margin-bottom: 48px;
+  }
+  .mobile-contact-list-item {
+    color: #434455;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
+  .current-color {
+    color: #404bbf;
+  }
+  .mobile-contact-list-part {
+    margin-bottom: 24px;
+  }
+  .mobile-social-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+  }
+  .mobile-social-link-icon {
+    fill: #f4f4fd;
+  }
 
-/* -------------------------------------TABLET STYLES----------------------------------------- */
-@media screen (min-width: 1158px) {
-  .overlay-item {
-    display: none;
+  .mobile-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
   }
 }
 
+/* -------------------------------------TABLET STYLES----------------------------------------- */
+@media screen and (min-width: 768px) {
+  .overlay-item {
+    display: none;
+  }
+  .modal-window-open-button {
+    display: none;
+    fill: transparent;
+  }
+}
+.container {
+  max-width: 736px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+/* HEADER */
+.header-container {
+  width: 736px;
+}
+.header-logotype {
+  color: #4d5ae5;
+  margin-right: 120px;
+}
+.logo {
+  color: #2e2f42;
+}
+.nav-menu {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+}
+.nav-menu-link {
+  color: #2e2f42;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-bottom: 24px;
+  padding-top: 24px;
+}
+.studio {
+  color: #4d5ae5;
+  position: relative;
+}
+.studio::after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  background-color: #404bbf;
+  height: 4px;
+}
+.contact-list-mailto {
+  color: #434455;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+/* SECTION 1 */
+.hero-image {
+  max-width: 768px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/theme-tablet.jpg);
+  min-height: 436px;
+}
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .hero-image {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/theme-tablet@2x.jpg);
+  }
+}
+.main-title-section {
+  max-width: 100%;
+}
+.main-title {
+  padding: 112px 136px 36px 136px;
+}
+
 /* -------------------------------------DESKTOP STYLES----------------------------------------- */
-@media screen (min-width: 768px) {
+@media screen and (min-width: 1158px) {
 }
