--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.body {
+body {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -274,7 +274,6 @@ button {
 .footer-subscribe-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 16px;
 }
 .logo-footer {
@@ -299,7 +298,6 @@ button {
 .footer-social {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 16px;
 }
 .footer-links {
@@ -318,6 +316,7 @@ button {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 .footer-form-label {
   color: #ffffff;
@@ -684,7 +683,9 @@ button {
     display: none;
     fill: transparent;
   }
-
+  .modal-window-mobile {
+    display: none;
+  }
   .container {
     max-width: 736px;
     /* padding-left: 16px;
@@ -815,6 +816,31 @@ button {
   }
   .portfolio-list-main {
     width: calc((100% - 24px) / 2);
+  }
+  /* Footer */
+  .footer-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 584px;
+    gap: 24px;
+    row-gap: 72px;
+  }
+  .footer-text {
+    max-width: 264px;
+    text-align: left;
+  }
+  .footer-subscribe-form {
+    flex-direction: row;
+    padding-top: 16px;
+  }
+  .footer-form {
+    width: 264px;
+  }
+  .footer-logotype {
+    text-align: left;
+  }
+  .footer-links-text {
+    text-align: left;
   }
 }
 /* -------------------------------------DESKTOP STYLES----------------------------------------- */
