--- a/css/styles.css
+++ b/css/styles.css
@@ -255,12 +255,12 @@ body {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
-.portfolio-project-text {
+.porfolio-project-text {
   color: #434455;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.02em;
 }
 .portfolio-list-item {
   padding: 32px 16px;
@@ -337,7 +337,8 @@ body {
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background: transparent;
-  padding: 16px 8px;
+  padding: 8px 16px;
+  outline: 0px solid transparent;
 }
 .footer-form::placeholder {
   color: #ffffff;
@@ -345,7 +346,6 @@ body {
   font-weight: 400;
   line-height: 2;
   letter-spacing: 0.04em;
-  padding: 16px 8px;
 }
 .button-subscribe {
   display: flex;
@@ -365,6 +365,9 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   border: none;
+}
+.form-subscribe-icon {
+  fill: #ffffff;
 }
 /* Backdrop */
 .backdrop {
@@ -497,9 +500,6 @@ body {
   outline: transparent;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.textarea-input:focus {
-  border-color: #4d5ae5;
 }
 .textarea-input::placeholder {
   color: rgba(46, 47, 66, 0.4);
@@ -699,9 +699,6 @@ body {
     padding-bottom: 96px;
   }
   /* HEADER */
-  .header-container {
-    width: 736px;
-  }
   .header-logotype {
     color: #4d5ae5;
     margin-right: 120px;
@@ -791,8 +788,7 @@ body {
   }
   .advantages-title {
     margin-bottom: 8px;
-    display: flex;
-    justify-content: flex-start;
+    text-align: left;
   }
 
   /* Section 3 */
@@ -854,5 +850,187 @@ body {
 @media screen and (min-width: 1158px) {
   .advantages-icon-item {
     display: block;
+  }
+  .container {
+    max-width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .section {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+  /* header */
+
+  .header-logotype {
+    margin-right: 76px;
+  }
+  .nav-menu-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-menu-link:hover,
+  .nav-menu-link:focus {
+    color: #404bbf;
+  }
+  .contact-list {
+    display: flex;
+    gap: 40px;
+  }
+  .contact-list-mailto {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-list-mailto:hover,
+  .contact-list-mailto:focus {
+    color: #404bbf;
+  }
+  /* section 1 */
+  .hero-image {
+    max-width: 1440px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/theme-desktop.jpg);
+    padding: 188px 0;
+  }
+  @media screen and (min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px),
+    screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+    .hero-image {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/theme-desktop@2x.jpg);
+    }
+  }
+  .button {
+    margin-top: 48px;
+  }
+  /* section 2 */
+  .advantages-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+  }
+  .advantages-item {
+    width: calc((100% - 72px) / 4);
+  }
+  .advantages-icon-item {
+    width: 264px;
+    height: 112px;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    background: #f4f4fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .advantages-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-top: 8px;
+  }
+  .advantages-text {
+    font-weight: 400;
+  }
+  /* section 3 */
+  .social-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social-link:hover,
+  .social-link:focus {
+    background-color: #404bbf;
+  }
+  /* section 4 */
+  .portfolio-list {
+    row-gap: 48px;
+  }
+  .portfolio-list-main {
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .portfolio-list-main:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
+  .overlay-item {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    overflow: auto;
+    transform: translateY(100%);
+    padding: 40px 32px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .overlay-text {
+    color: #f4f4fd;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+  .overlay {
+    position: relative;
+    overflow: hidden;
+  }
+  .portfolio-list-main:hover .overlay-item {
+    transform: translateY(0%);
+  }
+  /* footer */
+  .footer-container {
+    justify-content: space-between;
+  }
+  .footer-link-item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-link-item:hover,
+  .footer-link-item:focus {
+    background-color: #31d0aa;
+  }
+  .footer-form:focus {
+    border: 1px solid #4d5ae5;
+  }
+  .button-subscribe {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button-subscribe:focus,
+  .button-subscribe:hover {
+    background-color: #404bbf;
+    border-color: #404bbf;
+  }
+  /* backdrop */
+  .modal {
+    width: 408px;
+    min-height: 584px;
+  }
+  .close-btn:focus,
+  .close-btn:hover {
+    background-color: #404bbf;
+    border: none;
+  }
+  .form-wrappper-input:focus {
+    border-color: #4d5ae5;
+  }
+  .form-wrappper-input:focus + .input-icon {
+    fill: #4d5ae5;
+  }
+  .textarea-input:focus {
+    border-color: #4d5ae5;
+  }
+  .backdrop-btn:hover,
+  .backdrop-btn:focus {
+    background-color: #404bbf;
+    border-color: #404bbf;
   }
 }
