--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
 
 /* -------------------------------------MOBILE STYLES----------------------------------------- */
 .container {
-  max-width: 296px;
+  max-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
@@ -85,12 +85,15 @@ body {
   margin-left: auto;
 }
 .logotype {
-  color: #2e2f42;
+  color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
   text-transform: uppercase;
+}
+.logo {
+  color: #2e2f42;
 }
 /* modal window */
 
@@ -116,7 +119,7 @@ body {
   margin-top: 72px;
 }
 .hero-image {
-  max-width: 320px;
+  padding: 72px 0;
   margin: auto;
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -153,7 +156,7 @@ body {
   margin-right: auto;
 }
 /* section 2 */
-.title {
+.advantages-title {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
@@ -179,11 +182,18 @@ body {
   letter-spacing: 0.02em;
 }
 /* section 3 */
+.team {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
 .team-section {
   background: #f4f4fd;
-}
-.title {
-  margin-bottom: 72px;
 }
 .members-list {
   display: flex;
@@ -239,6 +249,21 @@ body {
   border-radius: 50%;
 }
 /* section 4 */
+.portfolio-main {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.portfolio-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 48px;
+}
 .portfolio-list-main {
   border: 1px solid #f4f4fd;
   background: #fff;
@@ -268,6 +293,8 @@ body {
 /* Footer */
 .footer {
   background-color: #2e2f42;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .footer-main,
 .footer-container,
@@ -326,6 +353,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 16px;
 }
 .footer-form {
   width: 288px;
@@ -610,8 +638,8 @@ body {
     border-color: #e7e9fc;
     border-radius: 50%;
   }
-  .mobile-nav {
-    padding-top: 72px;
+  .modal-mobile {
+    padding: 72px 24px 40px 16px;
   }
   .modal-window-mobile {
     position: fixed;
@@ -627,9 +655,7 @@ body {
   .modal-window-mobile.is-open {
     transform: translateX(0%);
   }
-  .mobile-nav-menu {
-    margin-bottom: 168px;
-  }
+
   .mobile-nav-menu-item {
     margin-bottom: 40px;
   }
@@ -694,16 +720,15 @@ body {
   }
   .container {
     max-width: 736px;
-    /* padding-left: 16px;
-    padding-right: 16px; */
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .section {
     padding-top: 96px;
     padding-bottom: 96px;
   }
   /* HEADER */
+
   .header-logotype {
     color: #4d5ae5;
     margin-right: 120px;
@@ -723,8 +748,6 @@ body {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 24px;
-    padding-top: 24px;
   }
   .studio {
     color: #4d5ae5;
@@ -740,17 +763,21 @@ body {
     background-color: #404bbf;
     height: 4px;
   }
+  .contact-list-item:last-child {
+    padding-top: 12px;
+  }
   .contact-list-mailto {
     color: #434455;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    font-style: normal;
   }
   /* SECTION 1 */
 
   .hero-image {
-    max-width: 768px;
+    padding: 112px 136px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -820,6 +847,10 @@ body {
     width: calc((100% - 24px) / 2);
   }
   /* Footer */
+  .footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
   .footer-container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -871,22 +902,33 @@ body {
     padding-top: 120px;
   }
   /* header */
-
+  .page-header {
+    padding: 0;
+  }
   .header-logotype {
     margin-right: 76px;
   }
   .nav-menu-link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    padding-bottom: 24px;
+    padding-top: 24px;
   }
   .nav-menu-link:hover,
   .nav-menu-link:focus {
     color: #404bbf;
+  }
+  .contact-list-item:last-child {
+    padding: 0;
   }
   .contact-list {
     display: flex;
     gap: 40px;
   }
   .contact-list-mailto {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contact-list-mailto:hover,
@@ -996,8 +1038,19 @@ body {
     transform: translateY(0%);
   }
   /* footer */
+  .footer {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+  .footer-main {
+    margin-right: 120px;
+  }
+  .footer-social {
+    margin-right: 80px;
+  }
   .footer-container {
     justify-content: space-between;
+    gap: 0;
   }
   .footer-link-item {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
